20161222
========
#30519 - Improved reaction at response fields that don't match the projected fields.

20160922
========
#28979 - Update httpclient version and improve tracing log

20160909
========
#28771 - Modify artifact name of Denodo OData2 Wrapper to "denodo-odata2-wrapper"
#20168 - Sharepoint integration: limit the number of relationships to expand

20160120
========
- Created first version of this component for Denodo 6.0